--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: boing_boot
 description: A framework for building web applications in Dart based on the Spring Boot framework.
 version: 0.0.1
-repository: https://github.com/evandersondev/boing_boot
+homepage: https://github.com/evandersondev/boing_boot
 
 environment:
-  sdk: ^3.7.0
+  sdk: ">=3.7.0 <4.0.0"
 
 # Add regular dependencies here.
 dependencies:
